--- a/app/src/main/res/layout/activity_friend_apply_box.xml
+++ b/app/src/main/res/layout/activity_friend_apply_box.xml
@@ -8,34 +8,34 @@
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar_apply_box"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
+        android:layout_width="0dp"
+        android:layout_height="56dp"
         android:background="?attr/colorPrimary"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:title="申请列表"
-        tools:layout_editor_absoluteY="0dp" />
+        app:title="好友请求" />
 
     <LinearLayout
-        android:fitsSystemWindows="true"
+        android:visibility="gone"
         android:id="@+id/no_friend_apply_tip_layout"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:fitsSystemWindows="true"
         android:gravity="center"
         android:orientation="vertical"
-        android:padding="15dp"
+        android:paddingTop="65dp"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar_apply_box">
 
         <ImageView
-            android:fitsSystemWindows="true"
             android:layout_width="96dp"
             android:layout_height="96dp"
+            android:fitsSystemWindows="true"
             android:src="@drawable/ic_empty" />
 
         <TextView
@@ -47,14 +47,13 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/friend_apply_list"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/no_friend_apply_tip_layout"
-        tools:layout_editor_absoluteY="214dp">
+        app:layout_constraintTop_toBottomOf="@+id/no_friend_apply_tip_layout">
 
     </android.support.v7.widget.RecyclerView>
 </android.support.constraint.ConstraintLayout>
