--- a/app/src/main/res/drawable-xxhdpi/run_button_selector.xml
+++ b/app/src/main/res/drawable-xxhdpi/run_button_selector.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true"
-        android:color="@color/colorStartRunPressed"/>
+        android:color="@color/StartRunPressed"/>
     <item android:state_focused="true"
-        android:color="@color/colorStartRun"/>
+        android:color="@color/StartRun"/>
     <item android:state_enabled="true"
-        android:color="@color/colorStartRun"/>
+        android:color="@color/StartRun"/>
 </selector>
