--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -16,8 +16,8 @@
 
     <ImageView
         android:id="@+id/app_logo"
-        android:layout_width="90dp"
-        android:layout_height="90dp"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
         android:layout_gravity="center"
         android:layout_margin="15dp"
         android:src="@drawable/ic_logo" />
@@ -36,11 +36,10 @@
         android:divider="@drawable/divider_horizontal"
         android:orientation="vertical"
         android:paddingBottom="20dp"
-        android:paddingTop="60dp"
+        android:paddingTop="20dp"
         android:showDividers="middle">
 
         <TextView
-
             android:id="@+id/feedback_about"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -74,7 +73,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="创新实践"
+        android:text="@string/developer"
         android:textColor="#fff"
         android:textSize="12sp" />
 </LinearLayout>
