--- a/app/src/main/res/layout/activity_run_details.xml
+++ b/app/src/main/res/layout/activity_run_details.xml
@@ -43,67 +43,79 @@
             android:visibility="gone" />
 
         <LinearLayout
+            android:id="@+id/run_detail_float_info"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="2dp"
-            android:background="#b4000000"
-            android:divider="@drawable/divider"
-            android:dividerPadding="5dp"
-            android:orientation="horizontal"
-            android:paddingBottom="10dp"
-            android:paddingTop="10dp"
-            android:showDividers="middle">
+            android:orientation="vertical"
+            android:padding="2dp">
 
-            <com.cxsj.runhdu.view.NumberView
-                android:id="@+id/date_text_details"
-                android:layout_width="0dp"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center"
-                app:numberDesText="跑步日期"
-                app:numberDesTextColor="#fff"
-                app:numberText="1月1日"
-                app:numberTextColor="#FFF"
-                app:numberUnitText=""
-                app:numberUnitTextColor="#b4ffffff" />
+                android:background="#b4000000"
+                android:divider="@drawable/divider"
+                android:dividerPadding="5dp"
+                android:orientation="horizontal"
+                android:paddingBottom="10dp"
+                android:paddingTop="10dp"
+                android:showDividers="middle">
 
-            <com.cxsj.runhdu.view.NumberView
-                android:id="@+id/start_time_text_details"
-                android:layout_width="0dp"
+                <com.cxsj.runhdu.view.NumberView
+                    android:id="@+id/date_text_details"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    app:numberDesText="跑步日期"
+                    app:numberDesTextColor="#fff"
+                    app:numberText="1月1日"
+                    app:numberTextColor="#FFF"
+                    app:numberUnitText=""
+                    app:numberUnitTextColor="#b4ffffff" />
+
+                <com.cxsj.runhdu.view.NumberView
+                    android:id="@+id/start_time_text_details"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.9"
+                    app:numberDesText="开始时间"
+                    app:numberDesTextColor="#fff"
+                    app:numberText="00:00"
+                    app:numberTextColor="#FFF"
+                    app:numberUnitText=""
+                    app:numberUnitTextColor="#b4ffffff" />
+
+                <com.cxsj.runhdu.view.NumberView
+                    android:id="@+id/duration_details"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    app:numberDesText="持续时间"
+                    app:numberDesTextColor="#fff"
+                    app:numberText="00:00:00"
+                    app:numberTextColor="#FFF"
+                    app:numberUnitText=""
+                    app:numberUnitTextColor="#b4ffffff" />
+
+
+                <com.cxsj.runhdu.view.NumberView
+                    android:id="@+id/speed_text_details"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:scaleX="1"
+                    app:numberDesText="平均速度"
+                    app:numberDesTextColor="#fff"
+                    app:numberText="0.00"
+                    app:numberTextColor="#FFF"
+                    app:numberUnitText="M/s"
+                    app:numberUnitTextColor="#b4ffffff" />
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.9"
-                app:numberDesText="开始时间"
-                app:numberDesTextColor="#fff"
-                app:numberText="00:00"
-                app:numberTextColor="#FFF"
-                app:numberUnitText=""
-                app:numberUnitTextColor="#b4ffffff" />
-
-            <com.cxsj.runhdu.view.NumberView
-                android:id="@+id/duration_details"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                app:numberDesText="持续时间"
-                app:numberDesTextColor="#fff"
-                app:numberText="00:00:00"
-                app:numberTextColor="#FFF"
-                app:numberUnitText=""
-                app:numberUnitTextColor="#b4ffffff" />
-
-
-            <com.cxsj.runhdu.view.NumberView
-                android:id="@+id/speed_text_details"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:scaleX="1"
-                app:numberDesText="平均速度"
-                app:numberDesTextColor="#fff"
-                app:numberText="0.00"
-                app:numberTextColor="#FFF"
-                app:numberUnitText="M/s"
-                app:numberUnitTextColor="#b4ffffff" />
+                android:text="" />
         </LinearLayout>
     </RelativeLayout>
 
@@ -112,7 +124,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginLeft="5dp"
-        android:layout_marginRight="15dp"
+        android:layout_marginRight="5dp"
         android:layout_weight="1"
         android:gravity="center"
         android:orientation="horizontal">
