--- a/app/src/main/res/menu/run_details_menu.xml
+++ b/app/src/main/res/menu/run_details_menu.xml
@@ -3,6 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:title="分享"
+        android:id="@+id/share_run_item"
+        android:icon="@drawable/ic_share_white"
+        app:showAsAction="ifRoom" />
+    <item
         android:id="@+id/delete_run_item"
         android:icon="@drawable/ic_delete"
         android:title="删除"
