--- a/app/src/main/res/values/drawables.xml
+++ b/app/src/main/res/values/drawables.xml
@@ -1,3 +1,1 @@
-<resources xmlns:android="http://schemas.android.com/apk/res/android">
-    <item name="ic_menu_share" type="drawable">@android:drawable/ic_menu_share</item>
-</resources>
+<resources xmlns:android="http://schemas.android.com/apk/res/android"></resources>
